--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --text: #ffffff;
     --text-footer: rgb(164, 164, 164);
     --bg-main: #0a0a0a;
+    --border-main: rgb(56, 56, 56);
 }
 
 * {
@@ -38,7 +39,7 @@ body {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(56, 56, 56);
+    border-bottom: 1px solid var(--border-main);
     border-radius: 0 0 10px 10px;
 }
 
@@ -84,12 +85,30 @@ body {
     border-bottom: 1px solid #707070;
 }
 
+.game-card-collection {
+    display: flex;
+    max-width: 50%;
+    gap: 15px;
+    margin-top: 50px;
+}
+
+.game-card-collection div[class^='game-card-'] {
+    /* flex: 1; */
+    /* display: block; */
+    height: 250px;
+    width: 250px;
+    align-content: center;
+    text-align: center;
+    border: 2px solid var(--border-main);
+    border-radius: 25px;
+}
+
 /* FOOTER */
 
 .footer {
     display: flex;
     justify-content: center;
-    border-top: 1px solid rgb(56, 56, 56);
+    border-top: 1px solid var(--border-main);
     padding: 5px;
     font-size: 0.8rem;
     color: var(--text-footer);
