--- a/style.css
+++ b/style.css
@@ -66,15 +66,43 @@ body {
     padding: 25px;
 }
 
-.title {
+.welcome-panel {
+    display: flex;
+    gap: 25px;
+    background-color: white;
+    border-radius: 25px;
+    flex: 1;
+    padding: 15px;
+    /* margin-right: 50%; */
+    max-height: 500px;
+    max-width: 50%;
     align-self: center;
+}
+
+.img-container {
+    height: auto;
+    border: 1px solid var(--border-main);
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.img-container img {
+    max-height: 100%;
+    min-width: 100%;
+}
+
+.title {
     font-size: 1.5rem;
+    /* max-width: 650px; */
+    flex: 1 1 0;
+    color: black;
 }
 
 .topic {
     margin: 25px 0 10px 0;
     border-left: 2px solid rgb(215, 140, 0);
     padding-left: 5px;
+    font-size: 1.15rem;
 }
 
 .main-content p {
@@ -83,24 +111,31 @@ body {
 
 .main-content em {
     border-bottom: 1px solid #707070;
+    font-size: 0.9rem;;
 }
 
 .game-card-collection {
     display: flex;
-    max-width: 50%;
+    /* max-width: 50%; */
+    padding: 0 15%;
     gap: 15px;
     margin-top: 50px;
+    justify-content: space-evenly;
 }
 
-.game-card-collection div[class^='game-card-'] {
+.game-card-collection a[class^='game-card-'] {
     /* flex: 1; */
     /* display: block; */
-    height: 250px;
-    width: 250px;
+    text-decoration: none;
+    /* height: 250px;
+    width: 250px; */
+    flex: 1;
+    flex-wrap: wrap;
     align-content: center;
     text-align: center;
     border: 2px solid var(--border-main);
-    border-radius: 25px;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 /* FOOTER */
